--- a/task1.ipynb
+++ b/task1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,26 +23,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
     "def apply_filters(frame):\n",
     "\n",
-    "    gauss_blur = cv2.GaussianBlur(frame,(15,15),75)\n",
-    "\n",
     "    sharp_kernel=np.array([[-1,-1,-1],\n",
     "                            [-1,9,-1],\n",
     "                            [-1,-1,-1]])\n",
-    "    \n",
-    "    sharpened_frame=cv2.filter2D(gauss_blur,-1,sharp_kernel)\n",
     "\n",
-    "    return sharpened_frame"
+    "\n",
+    "    blur = cv2.blur(frame,(11,11))\n",
+    "    \n",
+    "    sharpened_frame=cv2.filter2D(blur,-1,sharp_kernel)\n",
+    "\n",
+    "    Med_blur=cv2.medianBlur(sharpened_frame,13)\n",
+    "\n",
+    "    sharpened_frame=cv2.filter2D(Med_blur,-1,sharp_kernel)\n",
+    "\n",
+    "    gauss_blur = cv2.GaussianBlur(sharpened_frame,(5,5),20)\n",
+    "\n",
+    "\n",
+    "    return gauss_blur\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,8 +60,8 @@
     "\n",
     "    hsvc = cv2.cvtColor(c,cv2.COLOR_BGR2HSV)\n",
     "\n",
-    "    lowerlimt = max(0,hsvc[0][0][0]-35), max(0,hsvc[0][0][1] -35), max(0,hsvc[0][0][2] - 35)        # if value is negative set it to 0\n",
-    "    upperlimt = min(255,hsvc[0][0][0]+35), min(255,hsvc[0][0][1] +35), min(255,hsvc[0][0][2] + 35)  # if value is over 255 set it to 255\n",
+    "    lowerlimt = max(0,hsvc[0][0][0]-35), max(0,hsvc[0][0][1] -105), max(0,hsvc[0][0][2] - 95)        # if value is negative set it to 0\n",
+    "    upperlimt = min(255,hsvc[0][0][0]+35), min(255,hsvc[0][0][1] +95), min(255,hsvc[0][0][2] + 95)  # if value is over 255 set it to 255\n",
     "\n",
     "    lowerlimt = np.array(lowerlimt, dtype=np.uint8)\n",
     "    upperlimt = np.array(upperlimt, dtype=np.uint8)\n",
@@ -62,13 +71,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
     "cap = cv2.VideoCapture(video_path)\n",
     "\n",
-    "orange = [101,100,132]\n",
+    "orange = [54,57,115]\n",
+    "\n",
+    "kernel = np.ones((5, 5), np.uint8) \n",
     "\n",
     "while True:\n",
     "    ret, frame = cap.read()    \n",
@@ -85,7 +96,9 @@
     "\n",
     "    masked_frame = cv2.bitwise_and(edited_frame,edited_frame,mask=mask)\n",
     "    \n",
+    "    \n",
     "\n",
+    "    cv2.imshow(\"original\",edited_frame)\n",
     "    cv2.imshow(\"video\",masked_frame)\n",
     "\n",
     "    if cv2.waitKey(50) & 0xFF == ord(\"q\"):\n",
@@ -94,6 +107,13 @@
     "cap.release()\n",
     "cv2.destroyAllWindows()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
